Bug 487068 - Missing Text in Kate Color Settings
Summary: Missing Text in Kate Color Settings
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-15 17:43 UTC by yuntaz
Modified: 2024-05-25 17:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Observed and expected result (262.79 KB, application/zip)
2024-05-15 17:43 UTC, yuntaz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description yuntaz 2024-05-15 17:43:16 UTC
Created attachment 169510 [details]
Observed and expected result

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY
Hello, I notice that there is no text indicating the purpose of each color in Kate's Color settings anymore; I can only see the colors. In KDE Plasma 5, there is a small text on the right side of each color that indicates its purpose. This absence makes it difficult for users to know what to change.

STEPS TO REPRODUCE
1. Go to Kate -> Settings -> Configure Kate -> Color Themes -> Theme Editor -> Colors
2. Notice the absence of text

OBSERVED RESULT
See attachment

EXPECTED RESULT
See attachment

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Fedora Linux 40
(available in About System)
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.0

ADDITIONAL INFORMATION
Comment 1 Christoph Cullmann 2024-05-25 17:23:01 UTC
Git commit def6737dd382efdd20629b5fa1e3a40bacc0497c by Christoph Cullmann.
Committed on 25/05/2024 at 17:22.
Pushed by cullmann into branch 'master'.

ensure the color name text is visible

M  +6    -8    src/syntax/katecolortreewidget.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/def6737dd382efdd20629b5fa1e3a40bacc0497c