ensure the color name text is visible

BUG: 487068